@@ -1,5 +1,10 @@
 2015-03-23  Marcus Shawcroft  <marcus.shawcroft@arm.com>
 
+	(aarch64_mem_op_p): Update comment. Rename rtn to rt2.
+	(aarch64_erratum_seqeunce): Rename rtn to rt2.
+
+2015-03-23  Marcus Shawcroft  <marcus.shawcroft@arm.com>
+
 	* elfnn-aarch64.c (elfNN_aarch64_write_section): Adjust layout.
 
 2015-03-19  Nick Clifton  <nickc@redhat.com>
